[package]
name = "redis_dumbpool"
version = "0.2.0"
authors = ["Marco Napetti <marco.napetti@gmail.com>"]
edition = "2018"
description = "Really dumb implementation of a Redis Connection Pool"
license = "Apache-2.0/MIT"
repository = "https://github.com/nappa85/redis_dumbpool"
readme = "README.md"
keywords = ["async", "redis", "pool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "time", "sync"] }
futures-util = "0.3"
redis = { version = "0.20", features = ["tokio-comp"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
env_logger = "0.8.3"
rand = "0.8"
